Fixed z-index issue

--- a/src/components/app/Story.css
+++ b/src/components/app/Story.css
@@ -6,13 +6,13 @@ ul.sidebar {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  z-index: -1;
 }
 li.close {
   margin-top: 1rem;
 }
 main {
-  width: 100%;
+  width: calc(100% - 150px);
+  margin-left: 150px;
   height: 100vh;
   display: grid;
   place-items: center;
